syntax = "proto3";

package user;

option go_package = "gen/proto/userpb";

service UserService {
  rpc GetUser(UserRequest) returns (UserResponse);
  rpc ListUsers(UserRequest) returns (stream UserResponse);
  rpc UploadActions(stream ActionRequest) returns (ActionSummary);
  rpc Chat(stream ChatMessage) returns (stream ChatMessage);
}

message UserRequest {
  int64 id = 1;
}

message UserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message ActionRequest {
  string action = 1;
}

message ActionSummary {
  int64 count = 1;
}

message ChatMessage {
  string text = 1;
}